MODSOURCE-817: fix test