@@ -1553,7 +1553,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
-          //.sorted(comparing(Record::getOrder))
           .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected, get.result().getRecords());
@@ -1686,8 +1685,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       }
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
-      //expected.sort(comparing(Record::getId));
-      //batch.result().getRecords().sort(comparing(Record::getId));
       compareRecords(context, expected, batch.result().getRecords());
       RecordDaoUtil.countByCondition(postgresClientFactory.getQueryExecutor(TENANT_ID), DSL.trueCondition())
         .onComplete(count -> {
@@ -1717,8 +1714,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       }
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
-      //expected.sort(comparing(Record::getId));
-      //batch.result().getRecords().sort(comparing(Record::getId));
       compareRecords(context, expected, batch.result().getRecords());
       checkRecordErrorRecords(context, batch.result().getRecords(), TestMocks.getErrorRecord(0).getContent().toString(),
         TestMocks.getErrorRecord(0).getDescription());
@@ -1761,9 +1756,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          //.sorted(comparing(SourceRecord::getRecordId))
           .toList();
-        //get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1790,14 +1783,10 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       List<SourceRecord> expected = records.stream()
         .filter(r -> r.getRecordType().equals(recordType))
         .map(RecordDaoUtil::toSourceRecord)
-        //.sorted(comparing(SourceRecord::getRecordId))
-        //.sorted(comparing(SourceRecord::getOrder))
         .toList();
 
       List<SourceRecord> actual = new ArrayList<>();
       flowable.doFinally(() -> {
-
-          //actual.sort(comparing(SourceRecord::getRecordId));
           context.assertEquals(expected.size(), actual.size());
           compareSourceRecords(context, expected, actual);
 
@@ -1831,18 +1820,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          //.sorted(comparing(SourceRecord::getRecordId))
           .toList();
-        //sortByRecordId(get);
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
       });
     });
-  }
-
-  private void sortByRecordId(AsyncResult<SourceRecordCollection> get) {
-    get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
   }
 
   private void getMarcSourceRecordsBetweenDates(TestContext context, Record.RecordType recordType,
@@ -1867,9 +1850,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          //.sorted(comparing(SourceRecord::getRecordId))
           .toList();
-        //get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1922,9 +1903,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          //.sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        //get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1996,8 +1975,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         context.assertEquals(0, update.result().getErrorMessages().size());
         context.assertEquals(expected.size(), update.result().getTotalRecords());
-        //expected.sort(comparing(ParsedRecord::getId));
-        //update.result().getParsedRecords().sort(comparing(ParsedRecord::getId));
         compareParsedRecords(context, expected, update.result().getParsedRecords());
         GenericCompositeFuture.all(updated.stream().map(record -> recordDao
           .getRecordByMatchedId(record.getMatchedId(), TENANT_ID)
